edited example usage more explanation

--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -61,7 +61,9 @@
                 "\n",
                 "Multicollinearity exists when two or more explantory variables in a regression model are correlated. High degree of multicolinearity in a regression model is problematic as it can make coefficient estimates unstable. In the case where there is perfect correlation between two explanatory variables, it can even cause a regression model to fail as it will be impossible to assess how the target variable is affected by a unit change in an explantory variable when holding all other explantory variables constant. \n",
                 "\n",
-                "Multicollinearity can be checked through the Variance Inflator Factors (\"VIF\"). VIF of a given explanatory variable $X_i$ is computed by $\\frac{1}{(1 - R^2_{X_i, ... X_-i})}$ where $R^2_{X_i, ... X_-i}$ is the coefficient of determination from regressing $X_i$ against all other explanatory variables. Another way of detecting multicollinearity is to obtain the pairwise correlation between explanatory variables.\n"
+                "Multicollinearity can be checked through the Variance Inflator Factors (\"VIF\"). VIF of a given explanatory variable $X_i$ is computed by $\\frac{1}{(1 - R^2_{X_i, ... X_-i})}$ where $R^2_{X_i, ... X_-i}$ is the coefficient of determination from regressing $X_i$ against all other explanatory variables. Typically VIFs between 1 and 5 suggest that there is moderate correlation, but it is not severe enough to warrant any corrective measures. However, VIFs greater than 5 represent critical levels of multicollinearity where the coefficients will be poorly estimated. \n",
+                "\n",
+                "Another way of detecting multicollinearity is to obtain the pairwise correlation between explanatory variables. Correlation close to -1 or 1 suggests severe multicollinearity. \n"
             ]
         },
         {
