added comment to delete my first code chunk if Cheng uses the same arguments for his run_linear_regression function

--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -88,6 +88,7 @@
     }
    ],
    "source": [
+    "# DELETE THIS CODE CHUNK IF CHENG USES THE SAME ARGUMENTS FOR HIS RUN_LINEAR_REGRESSION FUNCTION\n",
     "# Merari - plot (using Cheng's function outputs)\n",
     "from vega_datasets import data\n",
     "from linreg_ally.models import run_linear_regression\n",
