Highlight the cars dataset

--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -52,7 +52,7 @@
             "source": [
                 "## Exploratory Data Analysis (EDA)\n",
                 "\n",
-                "Since we are using the cars dataset from the Vega datasets package, it will be helpful to see whether there is a difference among the distributions of the various numerical features when looking at the origin of the car. Such an EDA can easily be achieved using the function `eda_summary` from `linreg_ally.eda`."
+                "Since we are using the `cars` dataset from the Vega datasets package, it will be helpful to see whether there is a difference among the distributions of the various numerical features when looking at the origin of the car. Such an EDA can easily be achieved using the function `eda_summary` from `linreg_ally.eda`."
             ]
         },
         {
