Modify qq plots documentation

--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -956,7 +956,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Interpreting the Q-Q Plot\n",
+    "### Interpreting the Q-Q Plot\n",
     "\n",
     "If the Q-Q plot shows a significant deviation from the red dashed line (which represents perfect normality), the residuals are not normally distributed. In our plot, a few points deviate from the line at the tails, suggesting potential skewness or outliers. However, since these deviations are minor, we can conclude that the residuals are approximately normal."
    ]
@@ -965,7 +965,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Interpreting the Residuals vs. Fitted Values Plot\n",
+    "### Interpreting the Residuals vs. Fitted Values Plot\n",
     "\n",
     "For the homoscedasticity assumption to hold, residuals should be randomly scattered around the red dashed line in the Residuals vs. Fitted Values plot. This would indicate that residual variance remains constant across all fitted values (homoscedasticity).\n",
     "\n",
@@ -976,7 +976,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Implications of Assumption Violations\n",
+    "### Implications of Assumption Violations\n",
     "\n",
     "If the normality assumption is violated:\n",
     "Ordinary Least Squares (OLS) regression still produces best linear unbiased estimates (BLUE) as long as independence and homoscedasticity hold. However, hypothesis tests and confidence intervals may be misleading if residuals deviate significantly from normality.\n",
@@ -989,7 +989,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusion\n",
+    "### Conclusion\n",
     "\n",
     "The `qq_and_residuals_plot` function is a valuable tool for assessing the normality and homoscedasticity assumptions in linear regression. If these assumptions are violated, you should consider corrective measures such as:\n",
     "\n",
