addressed review comments

--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -84,7 +84,7 @@
                 "cars = data.cars()\n",
                 "cars = cars.drop(columns=['Name'])\n",
                 "\n",
-                "train_df, test_df = train_test_split(cars, test_size = 0.2, random_state = 123)\n",
+                "train_df, test_df = train_test_split(cars, test_size=0.2, random_state=123)\n",
                 "X_train = train_df.iloc[:,1:]\n",
                 "y_train = train_df.iloc[:,0:1]\n",
                 "\n",
@@ -95,7 +95,11 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "The `check_multicollinearity()` function provides a simple and convenient way to detect multicollinearity in your dataset. Simply pass the cleaned training dataframe into the function and it will return the VIF for every numeric explanatory variable. You can also set the optional argument `threshold` such that the function returns only explanatory variables with a VIF beyond the set threshold. "
+                "The `check_multicollinearity()` function provides a simple and convenient way to detect multicollinearity in your dataset. Simply pass the cleaned training dataframe into the function and it will return the VIF for every numeric explanatory variable. You can also set the optional argument `threshold` such that the function returns only explanatory variables with a VIF beyond the set threshold. \n",
+                "\n",
+                "In the example below with the `cars` dataset, we are hoping to fit a linear regression to understand what factors of a car can affect its fuel efficiency. To verify whether multicollinearity exists in our explanatory variables ('Cylinders', 'Displacement', 'Horsepower', 'Weight_in_lbs', 'Acceleration'), we pass our training dataset into `check_multicollinearity()`. The output dataframe suggests our explanatory variables are highly correlated with each other, in particular `Weights_in_lbs` with a VIF of 126.9. In this case, it means differences in `Weight_in_lbs` between car makes can be well explained by other variables with high VIFs such as `Cylinders` and `Displacement`. \n",
+                "\n",
+                "It may be beneficial to revisit the research problem in hand and determine whether `Weight_in_lbs` should be included in our model. Domain knowledge will be particularly useful in guiding this decision."
             ]
         },
         {
@@ -173,7 +177,7 @@
                 }
             ],
             "source": [
-                "vif_df = check_multicollinearity(X_train_clean, vif_only = True)\n",
+                "vif_df = check_multicollinearity(X_train_clean, vif_only=True)\n",
                 "vif_df"
             ]
         },
@@ -240,7 +244,7 @@
                 }
             ],
             "source": [
-                "vif_df_w_threshold = check_multicollinearity(X_train_clean, threshold = 50, vif_only = True)\n",
+                "vif_df_w_threshold = check_multicollinearity(X_train_clean, threshold=50, vif_only=True)\n",
                 "vif_df_w_threshold"
             ]
         },
@@ -248,7 +252,9 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "`check_multicollinearity()` also allow users to obtain pairwise Pearson Correlation for the explanatory variables in the training set. To do so, simply set the argument `vif_only` as `FALSE`. "
+                "`check_multicollinearity()` also allow users to obtain pairwise Pearson Correlation for the explanatory variables in the training set. To do so, simply set the argument `vif_only` as `FALSE`. \n",
+                "\n",
+                "Back to our example with the `cars` dataset, the pairwise Pearson Correlations seem to agree with our VIF analysis that the explanatory variables are highly correlated with each other. Considerations should go into whether some of these variables should be dropped to ensure robustness of the regression model."
             ]
         },
         {
@@ -338,7 +344,7 @@
                 }
             ],
             "source": [
-                "vif_df, corr_chart = check_multicollinearity(X_train_clean, vif_only = False)\n",
+                "vif_df, corr_chart = check_multicollinearity(X_train_clean, vif_only=False)\n",
                 "corr_chart"
             ]
         },
