moved imports and fixed multi-col header

--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -36,15 +36,12 @@
             "source": [
                 "# Imports\n",
                 "from vega_datasets import data\n",
-                "from linreg_ally.eda import eda_summary"
+                "from linreg_ally.eda import eda_summary\n",
+                "from linreg_ally.multicollinearity import check_multicollinearity\n",
+                "from linreg_ally.models import run_linear_regression\n",
+                "from linreg_ally.plotting import qq_and_residuals_plot\n",
+                "from sklearn.model_selection import train_test_split "
             ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": []
         },
         {
             "cell_type": "markdown",
@@ -176,7 +173,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "### `check_multicollinearity`\n",
+                "## Check Multicollinearity\n",
                 "\n",
                 "Multicollinearity exists when two or more explantory variables in a regression model are correlated. High degree of multicolinearity in a regression model is problematic as it can make coefficient estimates unstable. In the case where there is perfect correlation between two explanatory variables, it can even cause a regression model to fail as it will be impossible to assess how the target variable is affected by a unit change in an explantory variable when holding all other explantory variables constant. \n",
                 "\n",
@@ -191,11 +188,6 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "from linreg_ally.multicollinearity import check_multicollinearity\n",
-                "from vega_datasets import data\n",
-                "from sklearn.model_selection import train_test_split \n",
-                "import altair as alt\n",
-                "\n",
                 "cars = data.cars()\n",
                 "cars = cars.drop(columns=['Name'])\n",
                 "\n",
@@ -614,8 +606,6 @@
                 }
             ],
             "source": [
-                "from vega_datasets import data\n",
-                "\n",
                 "df = data.cars()\n",
                 "df.head()"
             ]
@@ -665,9 +655,6 @@
                 }
             ],
             "source": [
-                "from vega_datasets import data\n",
-                "from linreg_ally.models import run_linear_regression\n",
-                "\n",
                 "df = data.cars()\n",
                 "df = df.dropna()\n",
                 "\n",
@@ -1339,8 +1326,6 @@
                 }
             ],
             "source": [
-                "from linreg_ally.plotting import qq_and_residuals_plot\n",
-                "\n",
                 "qq_and_residuals_plot(y_actual, y_predicted)"
             ]
         },
@@ -1407,7 +1392,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.11.11"
+            "version": "3.13.1"
         }
     },
     "nbformat": 4,
